After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680889 - user-panel: Strip remote dbus error before showing error
user-panel: Strip remote dbus error before showing error
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-31 09:37 UTC by Stef Walter
Modified: 2012-08-02 08:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-panel: Strip remote dbus error before showing error (1.42 KB, patch)
2012-07-31 09:39 UTC, Stef Walter
accepted-commit_now Details | Review

Description Stef Walter 2012-07-31 09:37:28 UTC
 * GDBus transfers dbus error codes in the error->message so strip that
   out before display
Comment 1 Stef Walter 2012-07-31 09:39:20 UTC
Created attachment 219955 [details] [review]
user-panel: Strip remote dbus error before showing error
Comment 2 Matthias Clasen 2012-07-31 17:29:59 UTC
Review of attachment 219955 [details] [review]:

Good idea
Comment 3 Matthias Clasen 2012-07-31 17:30:18 UTC
Review of attachment 219955 [details] [review]:

Good idea
Comment 4 Stef Walter 2012-08-02 08:19:09 UTC
Merged into master.