user-panel: Strip remote dbus error before showing error

* GDBus transfers dbus error codes in the error->message so strip that
   out before display

https://bugzilla.gnome.org/show_bug.cgi?id=680889